@startuml
!include templates/plantuml-theme.puml

scale 2/3
'left to right direction
center header
    C4 Architecture: Work Order System domain model
endheader

!includeurl https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/release/1-0/C4_Component.puml

title Work Order System domain model

abstract class EntityBase<T> {
  +Id : Guid
  +Equals(other : T) : bool
  +Equals(obj : object) : bool
  +ToString() : string
  +GetHashCode() : int
}

class WorkOrder {
  +Title : string
  +Description : string
  +RoomNumber : string
  +Status : WorkOrderStatus
  +Creator : Employee
  +Assignee : Employee
  +Number : string
  +FriendlyStatus : string
  +AssignedDate : DateTime?
  +CreatedDate : DateTime?
  +CompletedDate : DateTime?
  +ChangeStatus(status : WorkOrderStatus) : void
  +ChangeStatus(employee : Employee, date : DateTime, status : WorkOrderStatus) : void
  +GetMessage() : string
  +CanReassign() : bool
}

class Employee {
  +UserName : string
  +FirstName : string
  +LastName : string
  +EmailAddress : string
  +Roles : ISet<Role>
  +CompareTo(other : Employee) : int
  +GetFullName() : string
  +CanCreateWorkOrder() : bool
  +CanFulfillWorkOrder() : bool
  +AddRole(role : Role) : void
  +GetNotificationEmail(day : DayOfWeek) : string
}

class WorkOrderStatus {
  +Code : string
  +Key : string
  +FriendlyName : string
  +SortBy : byte
  {static} +None : WorkOrderStatus
  {static} +Draft : WorkOrderStatus
  {static} +Assigned : WorkOrderStatus
  {static} +InProgress : WorkOrderStatus
  {static} +Complete : WorkOrderStatus
  {static} +GetAllItems() : WorkOrderStatus[]
  +Equals(obj : object) : bool
  +ToString() : string
  +GetHashCode() : int
  +IsEmpty() : bool
  {static} +FromCode(code : string) : WorkOrderStatus
  {static} +FromKey(key : string) : WorkOrderStatus
  {static} +Parse(name : string) : WorkOrderStatus
}

class Role {
  +Name : string
  +CanCreateWorkOrder : bool
  +CanFulfillWorkOrder : bool
}

abstract class StateCommandBase <<record>> {
  +WorkOrder : WorkOrder
  +CurrentUser : Employee
  +StateTransitionEvent : IStateTransitionEvent?
  +TransitionVerbPresentTense : string
  +TransitionVerbPastTense : string
  +GetBeginStatus() : WorkOrderStatus
  +GetEndStatus() : WorkOrderStatus
  +IsValid() : bool
  +Matches(commandName : string) : bool
  +Execute(context : StateCommandContext) : void
}

class SaveDraftCommand <<record>> {
  +Execute(context : StateCommandContext) : void
}

class DraftToAssignedCommand <<record>> {
  +Execute(context : StateCommandContext) : void
}

class AssignedToInProgressCommand <<record>> {
}

class InProgressToCompleteCommand <<record>> {
  +Execute(context : StateCommandContext) : void
}

class StateCommandResult <<record>> {
  +WorkOrder : WorkOrder
  +TransitionVerbPresentTense : string
  +DebugMessage : string
}

' Inheritance relationships
WorkOrder --|> EntityBase
Employee --|> EntityBase
Role --|> EntityBase

' State command inheritance
SaveDraftCommand --|> StateCommandBase
DraftToAssignedCommand --|> StateCommandBase
AssignedToInProgressCommand --|> StateCommandBase
InProgressToCompleteCommand --|> StateCommandBase

' Associations
WorkOrder "1" *-- "1" WorkOrderStatus : status
WorkOrder "1" --> "0..1" Employee : creator
WorkOrder "1" --> "0..1" Employee : assignee
Employee "1" *-- "0..*" Role : roles

' State command associations
StateCommandBase --> WorkOrder : operates on
StateCommandBase --> Employee : CurrentUser
StateCommandResult --> WorkOrder : contains

LEGEND("Legend","WorkOrder: domain aggregate\nEmployee: user / actor\nRole: permission scope\nStateCommand: command object implementing guarded transitions\nEvent: published events for side-effects (e.g., WorkOrderAssignedToBotEvent)")
FOOTER()
@enduml